<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F4F6"
    tools:context=".Fragment.AddHikeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <!-- Label Name -->
                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lable_1"
                    android:textColor="#374151"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Name -->
                <EditText
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/border_input"
                    android:ems="10"
                    android:hint="Son Dong"
                    android:inputType="textCapSentences"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textColor="#111827"
                    android:textColorHint="#9CA3AF"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView3" />

                <!-- Label Location -->
                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/lable_2"
                    android:textColor="#374151"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/name" />

                <!-- Location -->
                <EditText
                    android:id="@+id/location"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/border_input"
                    android:ems="10"
                    android:hint="Quang Binh"
                    android:inputType="textCapSentences"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textColor="#111827"
                    android:textColorHint="#9CA3AF"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView4" />

                <!-- Label Date -->
                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/lable_3"
                    android:textColor="#374151"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/location" />

                <!-- Date display -->
                <EditText
                    android:id="@+id/date"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/border_input"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:focusedByDefault="false"
                    android:hint="14/08/2022"
                    android:inputType="text"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textColor="#111827"
                    android:textColorHint="#9CA3AF"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView5" />

                <!-- Button overlay mở DatePicker -->
                <Button
                    android:id="@+id/dateButton"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:background="@android:color/transparent"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:onClick="onOpenDatePicker"
                    app:layout_constraintBottom_toBottomOf="@id/date"
                    app:layout_constraintEnd_toEndOf="@id/date"
                    app:layout_constraintStart_toStartOf="@id/date"
                    app:layout_constraintTop_toTopOf="@id/date" />

                <!-- Label Circular -->
                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/lable_4"
                    android:textColor="#374151"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/date" />

                <!-- RadioGroup Yes/No -->
                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="@id/textView6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/textView6"
                    app:layout_constraintTop_toTopOf="@id/textView6">

                    <RadioButton
                        android:id="@+id/radioButton_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yes" />

                    <RadioButton
                        android:id="@+id/radioButton_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/no" />
                </RadioGroup>

                <!-- Label Length -->
                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/lable_5"
                    android:textColor="#374151"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView6" />

                <!-- Length -->
                <EditText
                    android:id="@+id/length"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/border_input"
                    android:ems="10"
                    android:hint="100"
                    android:inputType="number"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textColor="#111827"
                    android:textColorHint="#9CA3AF"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView7" />

                <!-- Label Level -->
                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/lable_6"
                    android:textColor="#374151"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/length" />

                <!-- Level display -->
                <EditText
                    android:id="@+id/level"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/border_input"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:focusedByDefault="false"
                    android:inputType="text"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textColor="#111827"
                    android:textColorHint="#9CA3AF"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView8" />

                <Spinner
                    android:id="@+id/levelSpinner"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="16dp"
                    app:layout_constraintBottom_toBottomOf="@id/level"
                    app:layout_constraintEnd_toEndOf="@id/level"
                    app:layout_constraintStart_toStartOf="@id/level"
                    app:layout_constraintTop_toTopOf="@id/level" />

                <!-- Label Description -->
                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/lable_7"
                    android:textColor="#374151"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/level" />

                <!-- Description -->
                <EditText
                    android:id="@+id/description"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/border_input"
                    android:ems="10"
                    android:gravity="top|start"
                    android:hint="@string/description_about_the_hike"
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:paddingLeft="16dp"
                    android:paddingTop="12dp"
                    android:paddingRight="16dp"
                    android:scrollbars="vertical"
                    android:scrollHorizontally="false"
                    android:textColor="#111827"
                    android:textColorHint="#9CA3AF"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView9" />

                <!-- Save button -->
                <Button
                    android:id="@+id/save_btn"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="#2563EB"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/add_button"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/description" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>