<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F4F6"
    tools:context=".Observation.AddObservationsActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardContainer"
            android:layout_width="349dp"
            android:layout_height="489dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">


                <TextView
                    android:id="@+id/textTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/observation"
                    android:textColor="#111827"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/textSubtitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:text="@string/add_observation"
                    android:textColor="#6B7280"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textTitle" />

                <!-- Label Observation -->
                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/observation"
                    android:textColor="#374151"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textSubtitle" />


                <EditText
                    android:id="@+id/observation"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/border_input"
                    android:ems="10"
                    android:hint="@string/bird"
                    android:inputType="textCapSentences"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textColor="#111827"
                    android:textColorHint="#9CA3AF"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView3" />


                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/time_of_observation"
                    android:textColor="#374151"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/observation" />


                <EditText
                    android:id="@+id/dateObservation"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/border_input"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/time_of_observation"
                    android:paddingLeft="16dp"
                    android:paddingRight="48dp"
                    android:textColor="#111827"
                    android:textColorHint="#9CA3AF"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView5" />


                <Button
                    android:id="@+id/dateTimeButton"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:background="@android:color/transparent"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    app:layout_constraintBottom_toBottomOf="@id/dateObservation"
                    app:layout_constraintEnd_toEndOf="@id/dateObservation"
                    app:layout_constraintStart_toStartOf="@id/dateObservation"
                    app:layout_constraintTop_toTopOf="@id/dateObservation" />


                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/comment"
                    android:textColor="#374151"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/dateObservation" />


                <EditText
                    android:id="@+id/comment"
                    android:layout_width="287dp"
                    android:layout_height="117dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/border_input"
                    android:ems="10"
                    android:gravity="top|start"
                    android:hint="@string/phoenix"
                    android:inputType="textMultiLine"
                    android:paddingLeft="16dp"
                    android:paddingTop="12dp"
                    android:paddingRight="16dp"
                    android:scrollbars="vertical"
                    android:textColor="#111827"
                    android:textColorHint="#9CA3AF"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView6"
                    tools:ignore="RtlHardcoded" />


                <Button
                    android:id="@+id/createObservation"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="4dp"
                    android:backgroundTint="#2563EB"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/add_observation"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/comment" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
